--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <title>Akintunde kayode</title>
+    <meta name="description" content="Using Code to Make Dreams Come Through" />
   </head>
   <body>
     <div id="root"></div>
